# GenSearch

./: LICENSE  README.md  app.py  project_structure.py  pyproject.toml
gensearch/: config.py  helper.py
research/: trials.ipynb
