[project]
name = "gensearch"
version = "0.1.0"
description = ""
authors = [
    {name = "dixithak"}
]
packages = [
    {include = "gensearch"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "streamlit (>=1.51.0,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "langchain (>=1.0.7,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "faiss-cpu (>=1.13.0,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
